--- a/scss/style.scss
+++ b/scss/style.scss
@@ -32,6 +32,7 @@ body {
   -ms-grid-columns  : 100vw;
 
   max-height        : 100vh;
+  overflow          : hidden;
 
   header {                             // IE needs grid items set explicitly
     -ms-grid-row    : 1;               // in the grid.
